# kobo-weather

./: Cargo.toml  Cross.toml  Makefile.toml  README.md
examples/: preview.rs
src/: dashboard.rs  kobo.rs  lib.rs  main.rs  render.rs  weather.rs  weather_icon.rs
