[package]
name = "kobo-weather"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kobo_weather"
path = "src/main.rs"

[lib]
name = "kobo_weather"
path = "src/lib.rs"

[[example]]
name = "preview"
path = "examples/preview.rs"

[dev-dependencies]
show-image = "0.13.1"
tiny-skia-path = "0.8.2"

[dependencies]
resvg = "0.25.0"
usvg = "0.25.0"
tiny-skia = "0.8.2"
anyhow = "1.0.66"