[package]
name = "kobo-weather"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kobo_weather"
path = "src/main.rs"

[lib]
name = "kobo_weather"
path = "src/lib.rs"

[[example]]
name = "preview"
path = "examples/preview.rs"

[dev-dependencies]
show-image = "0.13.1"
tiny-skia-path = "0.8.2"

[dependencies]
resvg = "0.27"
usvg = "0.27"
tiny-skia = "0.8"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
